--- a/content/page.html
+++ b/content/page.html
@@ -12,5 +12,6 @@
  
   
 <p>Hello <a href="abc" target="_blank">Unlock language. Unlock opportunity.</a> and after that close it again.</p>
+  <p>Hello <a href="abc" target="_blank">Unlock language. Unlock opportunity.</a> and after that close it again.</p>
 </body>
 </html>
