--- a/content/page.html
+++ b/content/page.html
@@ -42,7 +42,7 @@
 <tbody>
 <tr>
 <th>Row 1</th>
-<td>Y</td>
+<td><a href="/but heheh" title:"PP"></a></td>
 <td>Z</td>
 <td>Z</td>
 <td>Y</td>
@@ -55,7 +55,7 @@
 
 <tr>
 <th>Row 2</th>
-<td>2</td>
+<td>Y</td>
 <td>Y</td>
 <td>Y</td>
 <td>Y</td>
