--- a/content/page.html
+++ b/content/page.html
@@ -11,19 +11,9 @@
 <p attribute="Open the door to global business and drive growth with the world’s most powerful, connective, and customizable localization platform. The Phrase Localization Suite is built to automate, manage, and translate all your content into the languages your audiences speak, and the experiences they live.">Open the door to global business and drive growth with the world’s most powerful, connective, and customizable localization platform. The Phrase Localization Suite is built to automate, manage, and translate all your content into the languages your audiences speak, and the experiences they live.</p>
  
   
-<p>Hello "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-
- <a href="abc" target="_blank">Unlock language "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-
-. Unlock opportunity.</a> and after that close it again. "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-
-</p>
-  
+<p>Hello <a href="abc" target="_blank">Unlock language. Unlock opportunity.</a> and after that close it again. </p> 
   <p><table border="1" summary="Meaningless data, but table used to test THEAD behavior in user agents">
-<colgroup>
-<col id="first">
-<col id="mycol" span="9">
-</colgroup>
+
 <thead>
 <tr>
 <th>Rows</th>
@@ -42,7 +32,7 @@
 <tbody>
 <tr>
 <th>Row 1</th>
-<td><a href="/but heheh" title:"PP">HERE IS THE TEXT</a></td>
+<td>Hello &lt;a href="abc"&gt;Unlock language. Unlock opportunity.&lt;/a&gt; and after that close it again.</td>
 <td>Z</td>
 <td>Z</td>
 <td>Y</td>
