--- a/content/page.html
+++ b/content/page.html
@@ -32,7 +32,7 @@
 <tbody>
 <tr>
 <th>Row 1</th>
-<td>Hello &lt;a href="abc"&gt;Unlock language. Unlock opportunity.&lt;/a&gt; and after that close it again.</td>
+<td><p>Hello &lt;a href="abc"&gt;Unlock language. Unlock opportunity.&lt;/a&gt; and after that close it again.</p></td>
 <td>Z</td>
 <td>Z</td>
 <td>Y</td>
